--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
- 
-<body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
+    <head>
+        <title>Andreas Davidovich</title>
+        <link rel="stylesheet" href="">
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <h1 class="WIP">WIP resume</h1>
+    </body>
 </html>
